--- a/hdk/sample-solverhair/CMakeLists.txt
+++ b/hdk/sample-solverhair/CMakeLists.txt
@@ -10,17 +10,15 @@ project(HinaPE-Houdini)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(TARGET HinaCloth)
+set(TARGET SolverHair)
 
 set(Houdini_PATH "C:/Program Files/Side Effects Software/Houdini 20.0.506")
 set(Houdini_DIR ${Houdini_PATH}/toolkit/cmake)
 find_package(Houdini REQUIRED)
 
 set(SRC
-        DLLEntrance.cpp
-        solver.cpp
-        solver.h
-        attribute_helper.h
+        SIM_SolverHair.h
+        SIM_SolverHair.C
 )
 
 add_library(
