--- a/hdk/example-03 pbd cloth with collision/CMakeLists.txt
+++ b/hdk/example-03 pbd cloth with collision/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(TARGET PBDClothSolver)
 
 # Find Houdini
-set(Houdini_PATH "C:/Program Files/Side Effects Software/Houdini 20.0.506")
+set(Houdini_PATH "/Applications/Houdini/Houdini20.0.547/Frameworks/Houdini.framework/Versions/20.0/Resources")
 set(Houdini_DIR ${Houdini_PATH}/toolkit/cmake)
 find_package(Houdini REQUIRED)
 
@@ -30,4 +30,11 @@ target_include_directories(
         PRIVATE
         ${CMAKE_CURRENT_BINARY_DIR}
 )
+if (APPLE)
+    target_compile_options(
+            ${TARGET}
+            PRIVATE
+            -D_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION
+    )
+endif ()
 houdini_configure_target(${TARGET})
