--- a/hdk/example-05 pbf with foam/CMakeLists.txt
+++ b/hdk/example-05 pbf with foam/CMakeLists.txt
@@ -20,6 +20,9 @@ endif ()
 
 # Find Houdini
 set(Houdini_PATH "C:/Program Files/Side Effects Software/Houdini 20.0.506")
+if (APPLE)
+    set(Houdini_PATH "/Applications/Houdini/Houdini20.0.547/Frameworks/Houdini.framework/Versions/20.0/Resources")
+endif ()
 set(Houdini_DIR ${Houdini_PATH}/toolkit/cmake)
 find_package(Houdini REQUIRED)
 
