simple collision scene

--- a/hdk/example-05 pbf with foam/CMakeLists.txt
+++ b/hdk/example-05 pbf with foam/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library(
         pbf/solver.h
         pbf/util_fcl.h
         pbf/util_log.h
+        pbf/util_fcl.cpp
 )
 
 # Link Houdini Toolkit
