remove force CUDA dependency

--- a/hdk/Common/CUDA_CubbyFlow/CMakeLists.txt
+++ b/hdk/Common/CUDA_CubbyFlow/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB_RECURSE CUDA_CUBBYFLOW_SOURCE *.h *.hpp *.cpp *.cu)
-if (APPLE)
-    list(REMOVE_ITEM CUDA_CUBBYFLOW_SOURCE Core/CUDA/*)
+if (NOT MSVC)
+    list(FILTER CUDA_CUBBYFLOW_SOURCE EXCLUDE REGEX "${CMAKE_CURRENT_SOURCE_DIR}/Core/CUDA/.*")
 endif ()
 add_library(CUDA_CubbyFlow STATIC ${CUDA_CUBBYFLOW_SOURCE})
 target_link_libraries(CUDA_CubbyFlow PUBLIC ${CUDA_LIBRARIES} tbb)
@@ -27,3 +27,10 @@ target_compile_definitions(
         CUBBYFLOW_USE_CUDA
         CUBBYFLOW_TASKING_TBB
 )
+if (MSVC)
+    target_compile_definitions(
+            CUDA_CubbyFlow
+            PUBLIC
+            CUBBYFLOW_TASKING_TBB
+    )
+endif ()
