--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,4 @@ endif ()
 add_subdirectory(src/CUDA_CubbyFlow)
 add_subdirectory(src/CUDA_NeighborSearch)
 add_subdirectory(hdk)
+add_subdirectory(standalone)
