--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.26)
 cmake_policy(SET CMP0091 NEW)
 set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreadedDLL)
-project(HinaPE-Houdini)
+project(HinaPE-Houdini LANGUAGES CXX C CUDA)
 set(CMAKE_CXX_STANDARD 17)
 
 # Find Houdini
