--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
     set(CMAKE_CUDA_ARCHITECTURES 75)
 endif ()
 set(CUDA_LINK_LIBRARIES_KEYWORD PUBLIC)
-set(CUDA_SEPARABLE_COMPILATION OFF)
+set(CUDA_SEPARABLE_COMPILATION ON)
 set(CUDA_STANDARD 17)
 
 add_subdirectory(HinaPE)
