--- a/hdk/CMakeLists.txt
+++ b/hdk/CMakeLists.txt
@@ -15,7 +15,8 @@ target_link_libraries(
         PUBLIC
         Houdini
         HinaPE
-        HinaPE_CUDA
+
+#        Topology
 )
 target_include_directories(
         ${SIM_HinaPE_TARGET}
