--- a/HinaPE/CMakeLists.txt
+++ b/HinaPE/CMakeLists.txt
@@ -16,7 +16,7 @@ file(GLOB HINAPE_COMMON common/particles.h common/neighbors.h common/kernels.h c
 file(GLOB_RECURSE HINAPE_DFSPH_AKINCI_SOURCE DFSPH_Akinci/*.h DFSPH_Akinci/*.cpp)
 file(GLOB_RECURSE HINAPE_PBF_AKINCI_SOURCE PBF_Akinci/*.h PBF_Akinci/*.cpp)
 #file(GLOB_RECURSE HINAPE_RIGIDBODY_SOURCE RigidBody/*.h RigidBody/*.cpp)
-file(GLOB_RECURSE HINAPE_SMOKE_SOURCE Smoke/*.h Smoke/*.cpp Smoke/SmokeNew.h Smoke/SmokeNew.cpp Smoke/FieldUtils.h Smoke/FieldUtils.cpp)
+file(GLOB_RECURSE HINAPE_SMOKE_SOURCE Smoke/*.h Smoke/*.cpp Smoke/ViscositySolver.cpp Smoke/ViscositySolver.h Smoke/PressureSolver.cpp Smoke/PressureSolver.h Smoke/DiffusionSolver.cpp Smoke/DiffusionSolver.h Smoke/FieldUtils.h Smoke/FieldUtils.cpp)
 
 
 add_library(HinaPE STATIC
@@ -25,7 +25,6 @@ add_library(HinaPE STATIC
         ${HINAPE_PBF_AKINCI_SOURCE}
 #        ${HINAPE_RIGIDBODY_SOURCE}
         ${HINAPE_SMOKE_SOURCE}
-        test.cpp
 )
 target_link_libraries(HinaPE PUBLIC ${CUDA_LIBRARIES} Houdini CUDA_CubbyFlow CUDA_NeighborSearch Discregrid TreeNSearch ReactPhysics3D)
 target_link_directories(
@@ -40,6 +39,3 @@ target_include_directories(
         ${CMAKE_CURRENT_SOURCE_DIR}
         ${CMAKE_CURRENT_SOURCE_DIR}/../
 )
-
-add_executable(test test.cpp)
-target_link_libraries(test PUBLIC HinaPE)
