--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ geo
 CubbyFlow.lib
 src/CUDA_NeighborSearch/include/cuNSearch_export.h
 HinaPE/3rd_party/CUDA_peridyno
+/projects/backup/
+/projects/boat/
+/projects/drop/
+/projects/render/
+/projects/sim2/
+/projects/sim4/
